--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leaderboard</title>
+
 </head>
 <body>
-    
+    <h1 class="heading">Leaderboard</h1>
+    <div class="main-content" id="mainContent">
+        <div class="left-content">
+            <div class="top-left">
+                <h2>Recent scores</h2>
+                <button type="submit" class="btn">refresh</button>
+            </div>
+            <div class="display-scores">
+                <p>Name: 100</p>
+                <p>Name: 50</p>
+                <p>Name: 70</p>
+                <p>Name: 85</p>
+            </div>
+        </div>
+        <div class="right-content">
+            <h2>Add your score</h2>
+            <input type="text" placeholder="your name">
+            <input type="text" placeholder="your score">
+            <button type="submit" class="btn">submit</button>
+        </div>
+    </div>
 </body>
 </html>
